--- a/README
+++ b/README
@@ -1,19 +1,59 @@
 Dotfiles
 ========
 
-Curated configuration files and installer for i3/polybar/kitty/zsh/neovim.
+Personal configuration files and a minimal installer for a lightweight i3-based
+desktop and development environment.
 
-Install (recommended)::
+Quick install
+-------------
 
-    git clone https://github.com/0xjah/Dotfiles.git ~/Dotfiles
-    cd ~/Dotfiles
-    chmod +x install.sh
-    ./install.sh --dry-run
-    ./install.sh --backup --symlink
+Clone and preview changes with a dry run:
 
-Top-level contents::
+```bash
+git clone https://github.com/0xjah/Dotfiles.git ~/Dotfiles
+cd ~/Dotfiles
+chmod +x install.sh
+./install.sh --dry-run
+```
 
-    i3/    polybar/    kitty/    nvim/    rofi/    wallpapers/    install.sh
+Apply the dotfiles (create backups and symlinks):
 
-Report issues or feature requests via GitHub issues or pull requests.
+```bash
+./install.sh --backup --symlink
+```
+
+Installer flags
+---------------
+
+- `--dry-run`  : show actions without modifying files
+- `--backup`   : move existing targets to `~/.dotfiles_backup_<timestamp>/`
+- `--symlink`  : create symlinks instead of copying files
+
+Repository layout
+------------------
+
+Top-level and `.config/` directories contain component configs. Common
+folders you may find here:
+
+```
+.config/i3  .config/polybar  .config/kitty  .config/nvim  .config/rofi
+.config/dunst  .config/i3blocks  .config/picom  .zshrc  install.sh
+```
+
+Customization & usage
+----------------------
+
+- Edit the files in this repository to change configuration.
+- Re-run `./install.sh --symlink` to update installed symlinks.
+- Restore from backups in `~/.dotfiles_backup_<timestamp>/` if needed.
+
+Contributing
+------------
+
+Issues and pull requests are welcome. Please open them on GitHub.
+
+Credits
+-------
+
+Personal dotfiles by `0xjah`.
 
